--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -160,10 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "dc30f8c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "This isn't the good password >:(",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m     nouveau_mdp(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, letters)\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m liste\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrobot\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m passwordMaker(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtboor\u001b[39m\u001b[38;5;124m\"\u001b[39m)), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis isn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt the good password >:(\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: This isn't the good password >:("
+     ]
+    }
+   ],
    "source": [
     "# Now the hardest task.\n",
     "# Write a program that create all possible strings by using a list of letter.\n",
@@ -171,9 +183,20 @@
     "\n",
     "def passwordMaker(letters: str) -> list:\n",
     "    liste = []\n",
+    "    pile = [('', letters)]\n",
     "\n",
-    "    \n",
-    "    return\n",
+    "    while pile:\n",
+    "        string, letters_reste = pile.pop()\n",
+    "\n",
+    "        if not letters_reste:\n",
+    "            liste.append(string)\n",
+    "        else:\n",
+    "            for i, letter in enumerate(ler):\n",
+    "                new_string = current_string + letter\n",
+    "                new_remaining = remaining_letters[:i] + remaining_letters[i + 1:]\n",
+    "                pile.append((new_string, new_remaining))\n",
+    "\n",
+    "    return liste\n",
     "assert(\"robot\" in passwordMaker(\"tboor\")), \"This isn't the good password >:(\""
    ]
   },
