--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -160,22 +160,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "dc30f8c3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "This isn't the good password >:(",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m     nouveau_mdp(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, letters)\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m liste\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrobot\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m passwordMaker(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtboor\u001b[39m\u001b[38;5;124m\"\u001b[39m)), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis isn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt the good password >:(\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: This isn't the good password >:("
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now the hardest task.\n",
     "# Write a program that create all possible strings by using a list of letter.\n",
@@ -186,16 +174,15 @@
     "    pile = [('', letters)]\n",
     "\n",
     "    while pile:\n",
-    "        string, letters_reste = pile.pop()\n",
+    "        string, reste = pile.pop()\n",
     "\n",
-    "        if not letters_reste:\n",
+    "        if not reste:\n",
     "            liste.append(string)\n",
     "        else:\n",
-    "            for i, letter in enumerate(ler):\n",
-    "                new_string = current_string + letter\n",
-    "                new_remaining = remaining_letters[:i] + remaining_letters[i + 1:]\n",
-    "                pile.append((new_string, new_remaining))\n",
-    "\n",
+    "            for i, letter in enumerate(reste):\n",
+    "                string2 = string + letter\n",
+    "                reste2 = reste[:i] + reste[i + 1:]\n",
+    "                pile.append((string2, reste2))\n",
     "    return liste\n",
     "assert(\"robot\" in passwordMaker(\"tboor\")), \"This isn't the good password >:(\""
    ]
@@ -214,10 +201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8c61cadf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good job ! The password is 'seo it'.\n"
+     ]
+    }
+   ],
    "source": [
     "## # Database Pa$$word # ##\n",
     "from hashlib import blake2b\n",
@@ -264,10 +259,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "bcf5cbe7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length : 6\n",
+      "Begin : [1, 2, 3]\n",
+      "End : [4, 5, 6]\n",
+      "Start from the end : [5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# Before getting into it, here's a non exaustive list of operations that are used in lists.\n",
     "# You're free to test them at your needs. \n",
@@ -284,10 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2c7db9c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "x.extend([7,8]) # Allows to add multiple elements in a list.\n",
     "x.append(9) # Allows to add one element at a time in a list.\n",
@@ -296,10 +310,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "d24bbe1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of lists : [[1, 2, 3, 4, 5, 6, 7, 8, 9], [10, 11, 12]]\n",
+      "Merged list : [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n"
+     ]
+    }
+   ],
    "source": [
     "y = [10, 11, 12]\n",
     "listOfLists = [x, y]\n",
@@ -311,10 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "d2f4cc84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ascending sort : [1, 2, 3]\n",
+      "Descending sort : [3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "z = [2, 3, 1]\n",
     "\n",
@@ -344,10 +376,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f2820a73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8333333333333333\n",
+      "program finished\n",
+      "\n",
+      "division by zero\n",
+      "program finished\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def myHandmadeDivisor(nb1, nb2):\n",
     "    try:\n",
@@ -387,31 +432,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "bb86b0b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Well done!\n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
     "def getData(data: list, signature: str, range : tuple = None) -> list: # It must return the list of the valid data from Leo, without the signature \n",
-    "    return\n",
+    "    resultat = []\n",
+    "\n",
+    "    for ligne in data:\n",
+    "        if range is not None:\n",
+    "            debut, fin = range\n",
+    "            correspondance_temps = re.search(r'\\[(\\d+)\\]', ligne)\n",
+    "            if correspondance_temps:\n",
+    "                temps = int(correspondance_temps.group(1))\n",
+    "                if not (debut <= temps <= fin):\n",
+    "                    continue\n",
+    "\n",
+    "        index_signature = ligne.find(signature)\n",
+    "        if index_signature != -1:\n",
+    "            donnee = ligne[:index_signature].strip()\n",
+    "            resultat.append(donnee)\n",
+    "\n",
+    "    return resultat\n",
     "\n",
     "def getSignatures(data: list, range: tuple = None) -> list:\n",
-    "    return\n",
+    "    resultat = []\n",
+    "\n",
+    "    for ligne in data:\n",
+    "        if range is not None:\n",
+    "            debut, fin = range\n",
+    "            correspondance_temps = re.search(r'\\[(\\d+)\\]', ligne)\n",
+    "            if correspondance_temps:\n",
+    "                temps = int(correspondance_temps.group(1))\n",
+    "                if not (debut <= temps <= fin):\n",
+    "                    continue\n",
+    "\n",
+    "        correspondance_signature = re.search(r'( ~ \\s*[a-zA0-Z]+)', ligne, re.IGNORECASE)\n",
+    "        if correspondance_signature:\n",
+    "            resultat.append(correspondance_signature.group(0))\n",
+    "\n",
+    "    return resultat\n",
     "\n",
     "with open(\"test_database.txt\") as file:\n",
     "    file_content = file.read().splitlines()\n",
     "\n",
     "leoData = getData(file_content, \" ~ Leo\", (0, 30))\n",
-    "signatures = getSignatures(file_content)\n",
+    "signatures = getSignatures(file_content, (0, 30))\n",
     "\n",
-    "assert(leoData == [\"\\\"Appear weak when you are strong, and strong when you are weak.\\\"\",\n",
-    "\"\\\"Let your plans be dark and impenetrable as night, and when you move, fall like a thunderbolt.\\\"\",\n",
-    "\"\\\"Treat your men as you would your own beloved sons. And they will follow you into the deepest valley.\\\"\",\n",
-    "\"\\\"The wise warrior avoids the battle.\\\"\",\n",
-    "\"\\\"You have to believe in yourself.\\\"\"]), \"You still need to continue...\"\n",
+    "assert (leoData == [\n",
+    "    \"\\\"Appear weak when you are strong, and strong when you are weak.\\\"\",\n",
+    "    \"\\\"Let your plans be dark and impenetrable as night, and when you move, fall like a thunderbolt.\\\"\",\n",
+    "    \"\\\"Treat your men as you would your own beloved sons. And they will follow you into the deepest valley.\\\"\",\n",
+    "    \"\\\"The wise warrior avoids the battle.\\\"\",\n",
+    "    \"\\\"You have to believe in yourself.\\\"\"\n",
+    "]), \"getData: Data extraction is incorrect.\"\n",
     "\n",
-    "assert(signatures == [' ~ Leo', ' ~ Rob', ' ~ Ulrich', ' ~ Leo', ' ~ Thomas', ' ~ Simon', ' ~ uXXas', ' ~ Riot', ' ~ Santa08', ' ~ Leo', ' ~ Rob', ' ~ Rob', ' ~ Mortadelle', ' ~ Frank', ' ~ Stephane', ' ~ Jules', ' ~ Lactel', ' ~ Sodebo', ' ~ Rob', ' ~ Vivia', ' ~ Leo', ' ~ Volvic', ' ~ Rob', ' ~ Roman', ' ~ Lisa', ' ~ Mikael', ' ~ Leo', ' ~ Jules', ' ~ Mikael', ' ~ Florian', ' ~ Jules']), \"Something is wrong in these signatures...\"\n",
-    "print(\"Well done !\")"
+    "assert (signatures == [' ~ Leo', ' ~ Rob', ' ~ Ulrich', ' ~ Leo', ' ~ Thomas', ' ~ Simon', ' ~ uXXas', ' ~ Riot',\n",
+    "                      ' ~ Santa08', ' ~ Leo', ' ~ Rob', ' ~ Rob', ' ~ Mortadelle', ' ~ Frank', ' ~ Stephane', ' ~ Jules',\n",
+    "                      ' ~ Lactel', ' ~ Sodebo', ' ~ Rob', ' ~ Vivia', ' ~ Leo', ' ~ Volvic', ' ~ Rob', ' ~ Roman',\n",
+    "                      ' ~ Lisa', ' ~ Mikael', ' ~ Leo', ' ~ Jules', ' ~ Mikael', ' ~ Florian', ' ~ Jules']), \"getSignatures: Signature extraction is incorrect.\"\n",
+    "\n",
+    "print(\"Well done!\")"
    ]
   },
   {
