--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "id": "bb86b0b7",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Well done!\n"
+      "Well done !\n"
      ]
     }
    ],
@@ -486,22 +486,16 @@
     "    file_content = file.read().splitlines()\n",
     "\n",
     "leoData = getData(file_content, \" ~ Leo\", (0, 30))\n",
-    "signatures = getSignatures(file_content, (0, 30))\n",
+    "signatures = getSignatures(file_content)\n",
     "\n",
-    "assert (leoData == [\n",
-    "    \"\\\"Appear weak when you are strong, and strong when you are weak.\\\"\",\n",
-    "    \"\\\"Let your plans be dark and impenetrable as night, and when you move, fall like a thunderbolt.\\\"\",\n",
-    "    \"\\\"Treat your men as you would your own beloved sons. And they will follow you into the deepest valley.\\\"\",\n",
-    "    \"\\\"The wise warrior avoids the battle.\\\"\",\n",
-    "    \"\\\"You have to believe in yourself.\\\"\"\n",
-    "]), \"getData: Data extraction is incorrect.\"\n",
+    "assert(leoData == [\"\\\"Appear weak when you are strong, and strong when you are weak.\\\"\",\n",
+    "\"\\\"Let your plans be dark and impenetrable as night, and when you move, fall like a thunderbolt.\\\"\",\n",
+    "\"\\\"Treat your men as you would your own beloved sons. And they will follow you into the deepest valley.\\\"\",\n",
+    "\"\\\"The wise warrior avoids the battle.\\\"\",\n",
+    "\"\\\"You have to believe in yourself.\\\"\"]), \"You still need to continue...\"\n",
     "\n",
-    "assert (signatures == [' ~ Leo', ' ~ Rob', ' ~ Ulrich', ' ~ Leo', ' ~ Thomas', ' ~ Simon', ' ~ uXXas', ' ~ Riot',\n",
-    "                      ' ~ Santa08', ' ~ Leo', ' ~ Rob', ' ~ Rob', ' ~ Mortadelle', ' ~ Frank', ' ~ Stephane', ' ~ Jules',\n",
-    "                      ' ~ Lactel', ' ~ Sodebo', ' ~ Rob', ' ~ Vivia', ' ~ Leo', ' ~ Volvic', ' ~ Rob', ' ~ Roman',\n",
-    "                      ' ~ Lisa', ' ~ Mikael', ' ~ Leo', ' ~ Jules', ' ~ Mikael', ' ~ Florian', ' ~ Jules']), \"getSignatures: Signature extraction is incorrect.\"\n",
-    "\n",
-    "print(\"Well done!\")"
+    "assert(signatures == [' ~ Leo', ' ~ Rob', ' ~ Ulrich', ' ~ Leo', ' ~ Thomas', ' ~ Simon', ' ~ uXXas', ' ~ Riot', ' ~ Santa08', ' ~ Leo', ' ~ Rob', ' ~ Rob', ' ~ Mortadelle', ' ~ Frank', ' ~ Stephane', ' ~ Jules', ' ~ Lactel', ' ~ Sodebo', ' ~ Rob', ' ~ Vivia', ' ~ Leo', ' ~ Volvic', ' ~ Rob', ' ~ Roman', ' ~ Lisa', ' ~ Mikael', ' ~ Leo', ' ~ Jules', ' ~ Mikael', ' ~ Florian', ' ~ Jules']), \"Something is wrong in these signatures...\"\n",
+    "print(\"Well done !\")"
    ]
   },
   {
@@ -604,30 +598,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "id": "cf3dfa3a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "name 'result' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[85], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdictCounter\u001b[39m(d1: \u001b[38;5;28mdict\u001b[39m, d2: \u001b[38;5;28mdict\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mdict\u001b[39m:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m(dictCounter({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m200\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m100\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m100\u001b[39m}, {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m150\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m100\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124me\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m300\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m100\u001b[39m}) \u001b[38;5;241m==\u001b[39m\\\n\u001b[1;32m      5\u001b[0m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m350\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m200\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m100\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m100\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124me\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m300\u001b[39m})\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGood job ! We don\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt have to count letters anymore.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[88], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m         d3[index] \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mget(index, \u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m+\u001b[39m value\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m d3\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m(\u001b[43mdictCounter\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43ma\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m200\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43md\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43ma\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m150\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mc\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43me\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m300\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m\\\n\u001b[1;32m     12\u001b[0m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m350\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m200\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m100\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m100\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124me\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m300\u001b[39m})\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGood job ! We don\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt have to count letters anymore.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[88], line 5\u001b[0m, in \u001b[0;36mdictCounter\u001b[0;34m(d1, d2)\u001b[0m\n\u001b[1;32m      2\u001b[0m d3 \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index, value \u001b[38;5;129;01min\u001b[39;00m d1\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m----> 5\u001b[0m     d3[index] \u001b[38;5;241m=\u001b[39m \u001b[43mresult\u001b[49m\u001b[38;5;241m.\u001b[39mget(index, \u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m+\u001b[39m value\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index, value \u001b[38;5;129;01min\u001b[39;00m d2\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      8\u001b[0m     d3[index] \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mget(index, \u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m+\u001b[39m value\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'result' is not defined"
      ]
     }
    ],
    "source": [
     "def dictCounter(d1: dict, d2: dict) -> dict:\n",
     "    d3 = {}\n",
-    "    \n",
-    "    for i in range(0, len(d1)):\n",
-    "        d1[i] + d2[i]\n",
-    "    return\n",
     "\n",
+    "    for index, value in d1.items():\n",
+    "        d3[index] = result.get(index, 0) + value\n",
+    "\n",
+    "    for index, value in d2.items():\n",
+    "        d3[index] = result.get(index, 0) + value\n",
+    "\n",
+    "    return d3\n",
     "assert(dictCounter({'a': 200, 'b': 100, 'd': 100}, {'a': 150, 'c': 100, 'e': 300, 'b': 100}) ==\\\n",
     "{'a': 350, 'b': 200, 'c': 100, 'd': 100, 'e': 300})\n",
     "print(\"Good job ! We don't have to count letters anymore.\")"
